fixed h2 text align to center. ready for launch

--- a/assets/style.css
+++ b/assets/style.css
@@ -135,3 +135,8 @@ button[disabled] {
     font-size: 0.8rem;
   }
 }
+
+h2 {
+
+  text-align: center;
+}
